<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_create_common_bringup</name>
  <version>2.1.0</version>
  <description>Provides common launch and configuration scripts for a simulated iRobot(R) Create(R) 3 Educational Robot.</description>
  <maintainer email="ekumen@irbt.onmicrosoft.com">Ekumen</maintainer>
  <license>BSD</license>

  <author>iRobot</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>irobot_create_control</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>irobot_create_nodes</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
