<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_create_description</name>
  <version>2.1.0</version>
  <description>Provides the model description for the iRobot(R) Create(R) 3 Educational Robot.</description>
  <maintainer email="ekumen@irbt.onmicrosoft.com">Ekumen</maintainer>
  <license>BSD</license>

  <author>iRobot</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
