<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_create_gazebo_sim</name>
  <version>2.1.0</version>
  <description>Metapackage for the iRobot(R) Create(R) 3 robot Gazebo simulator<a href="http://gazebosim.org/">Gazebo</a> simulation stack.</description>

  <maintainer email="ekumen@irbt.onmicrosoft.com">Ekumen</maintainer>

  <license>BSD</license>

  <author>iRobot</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>irobot_create_gazebo_bringup</exec_depend>
  <exec_depend>irobot_create_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
